--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,18 @@
 body {
-    background-color:#e7e5e5
+    background-color: #e7e5e5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.main-body{
-    background-color:aqua
+.main-block {
+    width:65%;
+    height:100vh;
+    background-color: #9d9d9d;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:start;
+}
+.logo-title{
+
 }
