--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 <body>
     <div class="main-block">
     <div id="logo-title" class="logo-title">
-        <h1>YTConverter</h1>
+            <img  class="logo" src="~/img/oig.png" />
     </div>
-    <div id="get-url-youtube">
+    <div id="get-url-youtube" class="url-box">
         <form method="post" asp-controller="Home" asp-action="QualityView">
             <input type="text" name="url" />
             <input type="submit" value="Send" />
