--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,12 +7,29 @@ body {
 .main-block {
     width:65%;
     height:100vh;
-    background-color: #9d9d9d;
+    background-color: #c2a1a1;
     display:flex;
     flex-direction: column;
     align-items:center;
     justify-content:start;
 }
-.logo-title{
-
+.logo-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+.logo{
+    margin-top:30px;
+    margin-bottom:30px;
+    width:40%;   
+}
+.url-box{
+    margin:5px;
+}
+.quality-v {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
 }
