--- a/Views/Home/QualityView.cshtml
+++ b/Views/Home/QualityView.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Dictionary<int, string>
-<div id="file-info">
+<div id="file-info" class="file-info">
     <h1>
         Title: @ViewBag.Title
     </h1>
