--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e7e5e5;
+    background-color: #b9b9b9;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,29 +7,44 @@ body {
 .main-block {
     width:65%;
     height:100vh;
-    background-color: #c2a1a1;
+    background-color: #dedede;
     display:flex;
     flex-direction: column;
     align-items:center;
     justify-content:start;
 }
 .logo-title {
+    border:dotted;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
 }
-.logo{
+.logo {
     margin-top:30px;
     margin-bottom:30px;
     width:40%;   
 }
-.url-box{
-    margin:5px;
+.url-box {
+    width: 100%;
+    height: 100px;
+    border: dotted;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .quality-v {
+    border: dotted;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+}
+.file-info {
+    border: dotted;
+}
+.progress-bar {
+    width: 100%;
+    height: 100%;
+    border: dotted;
 }
