--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,11 +14,11 @@ body {
     justify-content:start;
 }
 .logo-title {
-    border:dotted;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
 }
 .logo {
     margin-top:30px;
@@ -28,23 +28,38 @@ body {
 .url-box {
     width: 100%;
     height: 100px;
-    border: dotted;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .quality-v {
-    border: dotted;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
 }
 .file-info {
-    border: dotted;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
 }
-.progress-bar {
+.prog-bar {
     width: 100%;
     height: 100%;
-    border: dotted;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.progress-title {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
 }
