--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,19 +1,21 @@
 body {
     background-color: #b9b9b9;
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: center;
 }
 .main-block {
-    width:65%;
-    height:100vh;
+    width: 65%;
+    min-height: 100%;
     background-color: #dedede;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    align-items:center;
-    justify-content:start;
+    align-items: center;
+    justify-content: start;
 }
 .logo-title {
+    width: 100%;
     border-radius: 25px;
     border: 2px solid #73AD21;
     display: flex;
@@ -35,6 +37,7 @@ body {
     justify-content: center;
 }
 .quality-v {
+    width: 100%;
     border-radius: 25px;
     border: 2px solid #73AD21;
     display: flex;
@@ -43,12 +46,12 @@ body {
     justify-content: start;
 }
 .file-info {
+    width: 100%;
     border-radius: 25px;
     border: 2px solid #73AD21;
 }
 .prog-bar {
     width: 100%;
-    height: 100%;
     border-radius: 25px;
     border: 2px solid #73AD21;
     display: flex;
@@ -57,7 +60,6 @@ body {
 }
 .progress-title {
     width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     border-radius: 25px;
