--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,6 +23,15 @@
     <div id="main-body">
         @RenderBody()
     </div>
+        <div class="about-site">
+            <p>Этот сайт создавался в целях обучения с ASP.NET Core MVC и SignalR</p>
+            <p>Сайт не предназначался для коммерческого использования. В связи с чем сайт имеет ряд багов.</p>
+            <p>- Технический внешний вид.</p>
+            <p>
+                - Библиотека VideoLibrary для скачивания файлов с YouTube, видимо давно не поддерживается создателем и поэтому переодичски могут возникать проблемы со скачиванием определённых
+                вариантов качества.
+            </p>
+        </div>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
