--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,67 +1,70 @@
+* {
+    font-size: 18px;
+    font-family: Arial;
+    font-weight: bold;
+}
 body {
-    background-color: #b9b9b9;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
+    background-color: #481c1c;
 }
 .main-block {
     width: 65%;
-    min-height: 100%;
-    background-color: #dedede;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
+    height:stretch;
+    background-color: #bda5a3;
+    margin: 0 auto;
 }
 .logo-title {
     width: 100%;
     border-radius: 25px;
-    border: 2px solid #73AD21;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 2px solid black;
+    display:flex;
+    justify-content:center;
 }
 .logo {
-    margin-top:30px;
-    margin-bottom:30px;
-    width:40%;   
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 40%;
 }
 .url-box {
+    margin: 0 auto;
     width: 100%;
-    height: 100px;
+    height: 100%;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid black;
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding: 30px;
 }
 .quality-v {
     width: 100%;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid black;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
+    justify-content: center;
 }
 .file-info {
     width: 100%;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid black;
+    padding: 30px;
 }
 .prog-bar {
     width: 100%;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid black;
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    padding: 15px;
 }
 .progress-title {
     width: 100%;
-    display: flex;
-    align-items: center;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid black;
+    padding: 15px;
+}
+.about-site {
+    width: 100%;
+    border-radius: 25px;
+    border: 2px solid black;
+    padding: 10px;
 }
